@@ -17,4 +17,3 @@ usr/share/man/man8/smbspool.8
 usr/share/man/man1/smbcacls.1
 usr/share/man/man1/smbcquotas.1
 usr/share/man/man1/smbtree.1
-usr/lib/cups/backend/smb
