@@ -1,6 +1,8 @@
 samba (2:3.5.11~dfsg-2) UNRELEASED; urgency=low
 
   * Don't export DEB_HOST_ARCH_OS in debian/rules, this is only used locally.
+  * Use dh_links instead of manually creating directories and symlinks from
+    debian/rules.
 
  -- Steve Langasek <vorlon@debian.org>  Sat, 24 Sep 2011 13:36:50 -0700
 
